--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "popper.js": "^1.16.1",
     "qs": "^6.14.0",
     "vue": "^3.5.13",
+    "vue-cli": "^2.9.6",
     "vue-cookies": "^1.8.6",
     "vue-router": "^4.5.0"
   },
